Jump Start Changelog
====================

2.0.0-beta3
-----

* Added "Sidebar Widgets" styling section to Theme Options for all theme bases.
* Added theme support for `title-tag` in WP 4.1+
* Darkened body text in WordPress page editor.
* CSS tweaks to buttons.
* Added "tb_square_medium" crop size, 500x500.
* Fixed breadcrumbs when bbPress is installed.
* Fixed custom padding not applying to "popout" elements in Builder.
* Fixed issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
* Fixed Blog display option not displaying "full content" when selected, instead of excerpts.
* Fixed slider option type bug, not allowing you to insert images less than 200px wide. This bug was most evident when trying to use the Partner Logos element in the Builder and using small logo images.
* The following functions have been deleted. These functions were simply action wrappers. For the most part, as long as you haven't (as suggested not to do) moved main template files header.php, footer.php, sidebar-right.php, or sidebar-left.php to your child theme, this shouldn't effect you.
	* `themeblvd_head()`
	* `themeblvd_before()`
	* `themeblvd_header_top()`
	* `themeblvd_header_above()`
	* `themeblvd_header_content()`
	* `themeblvd_header_menu()`
	* `themeblvd_header_after()`
	* `themeblvd_featured_start()`
	* `themeblvd_featured()`
	* `themeblvd_featured_end()`
	* `themeblvd_main_start()`
	* `themeblvd_main_top()`
	* `themeblvd_breadcrumbs()`
	* `themeblvd_before_layout()`
	* `themeblvd_main_bottom()`
	* `themeblvd_main_end()`
	* `themeblvd_featured_below_start()`
	* `themeblvd_featured_below()`
	* `themeblvd_featured_below_end()`
	* `themeblvd_footer_before()`
	* `themeblvd_footer_above()`
	* `themeblvd_footer_content()`
	* `themeblvd_footer_sub_content()`
	* `themeblvd_footer_below()`
	* `themeblvd_footer_after()`
	* `themeblvd_after()`
	* `themeblvd_header_logo()`
	* `themeblvd_header_addon()`