@@ -5,12 +5,13 @@
  *   1.1 - Typography
  *   1.2 - Buttons
  *   1.3 - Forms
- *   1.4 - Panels
- *   1.5 - Tabs
- *   1.6 - Thumbnails
- *   1.7 - Code Elements
- *   1.8 - Pagination
- *   1.9 - Main Navigation
+ *   1.4 - Alerts
+ *   1.5 - Panels
+ *   1.6 - Tabs
+ *   1.7 - Thumbnails
+ *   1.8 - Code Elements
+ *   1.9 - Pagination
+ *   1.10 - Main Navigation
  * 2.0 - Common Classes
  *   2.1 - General
  *   2.2 - Images
@@ -270,6 +271,14 @@ p {
 	.btn+.btn {
 		margin-top: 5px;
 	}
+}
+
+/* Alerts */
+.alert {
+	border-width: 0;
+	border-left-width: 10px;
+	-webkit-border-radius: 0;
+	border-radius: 0;
 }
 
 /* Forms */
