@@ -6,6 +6,7 @@ Jump Start Changelog
 
 * Added "Sidebar Widgets" styling section to Theme Options for all theme bases.
 * Added theme support for `title-tag` in WP 4.1+
+* Added a little design flare to alert component, to look less Bootstrap-ish.
 * Darkened body text in WordPress page editor.
 * CSS tweaks to buttons.
 * Added "tb_square_medium" crop size, 500x500.
